<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/result"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="150dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/resultTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="354dp"
        tools:layout_editor_absoluteY="4dp"
        tools:text="25" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/resultFlow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:constraint_referenced_ids="textView,resultTv"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/please_enter_the_second_operand"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultFlow">

        <EditText
            android:id="@+id/displayEt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/multiplyBrn"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_background"
        android:onClick="multiply"
        android:text="@string/multiply"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="210dp"
        tools:layout_editor_absoluteY="150dp" />

    <Button
        android:id="@+id/divideBtn"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_background"
        android:onClick="divide"
        android:text="@string/divide"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="307dp"
        tools:layout_editor_absoluteY="150dp" />

    <Button
        android:id="@+id/minusBtn"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_background"
        android:onClick="minus"
        android:text="@string/minus"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="113dp"
        tools:layout_editor_absoluteY="150dp" />

    <Button
        android:id="@+id/plusBtn"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_background"
        android:onClick="plus"
        android:text="@string/plus"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="150dp" />


    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:padding="8dp"
        app:constraint_referenced_ids="plusBtn,minusBtn,multiplyBrn,divideBtn"
        app:flow_horizontalStyle="spread_inside"
        app:layout_constraintBottom_toTopOf="@+id/flow3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:layout_constraintVertical_bias="0.482" />

    <Button
        android:id="@+id/undoBtn"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_background"
        android:enabled="false"
        android:onClick="undo"
        android:text="@string/undo"
        android:textColor="@color/black"
        tools:layout_editor_absoluteX="136dp"
        tools:layout_editor_absoluteY="286dp" />

    <Button
        android:id="@+id/redoBtn"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_background"
        android:enabled="false"
        android:onClick="redo"
        android:text="@string/redo"
        android:textColor="@color/black"
        tools:layout_editor_absoluteX="264dp"
        tools:layout_editor_absoluteY="286dp" />

    <Button
        android:id="@+id/equaleBtn"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_background"
        android:enabled="false"
        android:onClick="equal"
        android:text="@string/equal"
        android:textColor="@color/teal_200"
        android:textSize="24sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="286dp"
        tools:layout_editor_absoluteY="221dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:constraint_referenced_ids="undoBtn,redoBtn, equaleBtn"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/multiplyBrn" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/collectionView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2">

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>